# receiptly

./: .dockerignore  .env.example  .gitignore  .mailmap  .releaserc.json  CHANGELOG.md  DELTA-NOTES.md  Dockerfile  PATCH-NOTES.md  README.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: docker.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_receipts_nullable_date_amount.py  0003_ai_settings.py  0004_demo_receipt.py  0005_item_pack_amount.py  0006_receipt_custom_fields.py  0007_receipt_ai_suggestions.py  0008_ai_settings_provider_rework.py  0009_ai_usage_events.py  0010_drop_demo_receipts.py  0011_receipt_adjustment_fields.py  0012_audit_log.py  0013_totp_widen_secret_recovery_codes.py  0014_household_security_settings.py  0015_smtp_settings.py  0016_webauthn_credentials.py  0017_passkey_exclusive_login.py  0018_notifications.py  0019_notification_email_opt_ins.py  0020_receipt_shares.py  0021_receipt_shares_label.py  0022_scheduled_deletion.py
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/api/: account.py  audit_log.py  auth.py  buckets.py  health.py  notifications.py  receipts.py  security_settings.py  settings.py  share.py  smtp_settings.py  totp.py  webauthn.py
backend/app/auth/: dependencies.py  password_reset.py  pending_2fa.py  pending_reactivation.py  rate_limit.py  request_meta.py  security.py  session.py  webauthn_challenge.py
backend/app/models/: __init__.py  ai_settings.py  ai_usage_event.py  audit_log.py  bucket.py  household.py  household_security_settings.py  item.py  merchant.py  mixins.py  notification.py  product.py  receipt.py  receipt_share.py  smtp_settings.py  totp_recovery_code.py  user.py  webauthn_credential.py
backend/app/schemas/: account.py  ai_settings.py  audit.py  auth.py  bucket.py  notification.py  receipt.py  receipt_share.py  security_settings.py  smtp_settings.py  totp.py  webauthn.py
backend/app/scripts/: account_deletion_teardown.py  cleanup_audit_log.py  cleanup_notifications.py  warranty_notifications.py
backend/app/services/: account_deletion.py  ai_extraction.py  ai_pricing.py  ai_provider_client.py  ai_provider_resolution.py  audit.py  bucket_access.py  crypto.py  data_export.py  email.py  email_templates.py  household_security.py  notifications.py  pdf_extraction.py  pii_redaction.py  receipt_shares.py  smtp_resolution.py  storage.py  totp.py  webauthn.py
backend/tests/: conftest.py  test_account_deletion_request.py  test_account_teardown.py  test_ollama_ssrf_guard.py  test_passkey_exclusive_login.py  test_pii_redaction.py  test_receipt_shares.py  test_webauthn.py
frontend/: Dockerfile  capacitor.config.ts  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: categories.ts  formatDate.ts  mosaicDensity.ts  notifications.ts  reauth.ts  theme.ts  userAgent.ts  webauthn.ts
frontend/src/lib/components/: AiUsageBadge.svelte  BucketPill.svelte  CustomSelect.svelte  DeleteAccountDialog.svelte  PasskeyEnrollment.svelte  ReauthDialog.svelte  ReceiptCard.svelte  ReceiptDetailView.svelte  ReceiptModal.svelte  ReceiptRow.svelte  RecoveryCodesReveal.svelte  SecretField.svelte  SectionHeader.svelte  SettingsNav.svelte  ShareManagementModal.svelte  ThemeToggle.svelte  TotpEnrollment.svelte  UploadFlow.svelte  UploadModal.svelte
frontend/src/lib/i18n/: de.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+22 files in other folders)
