[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receiptly-backend"
version = "0.1.0-alpha.1"
description = "receiptly API — privacy-first Belege-DMS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
    "cryptography>=42.0",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "webauthn>=2.5",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
# "app" ist nicht als editables Package installiert (siehe Dockerfile: pip install -e .
# nur im Image) — pythonpath macht `import app...` auch bei lokalem `pytest`-Aufruf ohne
# vorherige Installation möglich.
pythonpath = ["."]
testpaths = ["tests"]
# Session-weiter statt function-weiter Event-Loop (pytest-asyncio-Default): der
# SQLAlchemy-Async-Engine (app/database.py) ist ein Modul-Singleton mit eigenem
# Connection-Pool — bei einem neuen Loop pro Testfunktion versucht ein Folgetest, eine an
# den (dann bereits geschlossenen) Loop des Vorgängertests gebundene asyncpg-Connection
# wiederzuverwenden ("cannot perform operation: another operation is in progress"). Erst
# ab test_webauthn.py relevant (erste DB-gestützte Tests im Projekt).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.setuptools.packages.find]
include = ["app*"]
